Cleaned up .gitignore to exclude unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -159,7 +159,17 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-.vscode
-templates
-app.py
-scailng.pkl
+# Ignore virtual environments
+venv/
+env/
+__pycache__/
+
+# Ignore model artifacts
+*.pkl
+
+# Ignore IDE and system files
+.vscode/
+*.log
+.DS_Store
+*.pyc
+*.ipynb_checkpoints/
